<resources>
    <string name="app_name">Angenda_Online</string>


    <!--Main activity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--actividad registro-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombresEt">Nombres</string>
    <string name="CorreoEt">Correo electronico</string>
    <string name="ContrasenhaEt">Contrasenha</string>
    <string name="ConfirmarContrasenhaEt">confirmar contrasenha</string>
    <string name="ResgistrarUsuario">Registrar</string>
    <string name="Tengounacuenta">Tengo una cuenta</string>

        <string-array name="horas">
            <item>00:00 A.M.</item>
            <item>1:00 A.M</item>
            <item>2:00 A.M.</item>
            <item>3:00 A.M.</item>
            <item>4:00 A.M.</item>
            <item>5:00 A.M.</item>
            <item>6:00 A.M.</item>
            <item>7:00 A.M.</item>
            <item>8:00 A.M.</item>
            <item>9:00 A.M.</item>
            <item>10:00 A.M.</item>
            <item>11:00 A.M.</item>
            <item>12:00 P.M.</item>
            <item>13:00 P.M.</item>
            <item>14:00 P.M.</item>
            <item>15:00 P.M.</item>
            <item>16:00 P.M.</item>
            <item>17:00 P.M.</item>
            <item>18:00 P.M.</item>
            <item>19:00 P.M.</item>
            <item>20:00 P.M.</item>
            <item>21:00 P.M.</item>
            <item>22:00 P.M.</item>
            <item>23:00 P.M.</item>
        </string-array>

</resources>